--- a/tracker-app/src/components/GazeTracker/GazeTracker.css
+++ b/tracker-app/src/components/GazeTracker/GazeTracker.css
@@ -39,6 +39,12 @@
   height: 80vh;
 }
 
+.validation-container button {
+  margin-top: 20px;
+  padding: 12px 24px;
+  font-size: 18px;
+}
+
 .validation-dot {
   width: 25px;
   height: 25px;
